Interface CSS and styling

--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
     <script defer src="script.js"></script>
     <script defer src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="jadepineda">made by jade pineda</div>
     <main>
         <section class="interface">
-            <img src="" alt="" class="logo">
+            <div class="logoContainer">
+                <img src="images/TrackFitLogo.png" alt="" class="logo">
+            </div>
             <section class="workoutsContainer">
                 <div class="specificWorkout">
                     <form action="" class="logWorkout">
@@ -23,26 +29,26 @@
                                 <option value="Running">Cycling</option>
                             </select>
                         </article>
-                        <article class="duration">
+                        <article class="durationContainer">
                             <label>Duration</label>
-                            <input type="text" class="min">
+                            <input type="text" class="min" placeholder="minutes">
                         </article>
-                        <article class="distance">
+                        <article class="distanceContainer">
                             <label>Distance</label>
-                            <input type="text" class="distance">
+                            <input type="text" class="distance" placeholder="miles">
                         </article>
-                        <article class="runningOrCycling">
-                            <article class="elevationGain">
+                        <section class="determineContainer">
+                            <article class="elevationGainContainer">
                                 <label>Elevation Gain</label>
-                                <input type="text" class="elevationGain">
+                                <input type="text" class="elevationGain" placeholder="step per min">
                             </article>
-                            <article class="cadence hidden">
+                            <article class="cadenceContainer" style="display: none">
                                 <label>Cadence</label>
-                                <input type="text" class="cadence">
+                                <input type="text" class="cadence" placeholder="meters">
                             </article>
-                        </article>
+                        </section>
                     </form>
-                    <article class="displayedSummary hidden">
+                    <article class="displayedSummary" style="display: none">
                         <div class="summaryType">f</div>
                         <div class="summaryDuration">f</div>
                         <div class="summaryDistance">f</div>
