--- a/index.html
+++ b/index.html
@@ -33,47 +33,39 @@
           <img src="images/TrackFitLogo.png" alt="" class="logo" />
         </div>
         <section class="workoutsContainer">
-          <div class="specificWorkout">
-            <form class="logWorkout">
-              <article class="type">
-                <label>Type</label>
-                <select class="select">
-                  <option value="Running">Running</option>
-                  <option value="Running">Cycling</option>
-                </select>
-              </article>
-              <article class="durationContainer">
-                <label>Duration</label>
+          <form class="logWorkout">
+            <article class="type">
+              <label>Type</label>
+              <select class="select">
+                <option value="Running">Running</option>
+                <option value="Running">Cycling</option>
+              </select>
+            </article>
+            <article class="durationContainer">
+              <label>Duration</label>
+              <input type="text" class="durationInput" placeholder="minutes" />
+            </article>
+            <article class="distanceContainer">
+              <label>Distance</label>
+              <input type="text" class="distanceInput" placeholder="miles" />
+            </article>
+            <section class="determineContainer">
+              <article class="elevationGainContainer">
+                <label>Elevation Gain</label>
                 <input
                   type="text"
-                  class="durationInput"
-                  placeholder="minutes"
+                  class="elevationGainInput"
+                  placeholder="step per min"
                 />
               </article>
-              <article class="distanceContainer">
-                <label>Distance</label>
-                <input type="text" class="distanceInput" placeholder="miles" />
+              <article class="cadenceContainer" style="display: none">
+                <label>Cadence</label>
+                <input type="text" class="cadenceInput" placeholder="meters" />
               </article>
-              <section class="determineContainer">
-                <article class="elevationGainContainer">
-                  <label>Elevation Gain</label>
-                  <input
-                    type="text"
-                    class="elevationGainInput"
-                    placeholder="step per min"
-                  />
-                </article>
-                <article class="cadenceContainer" style="display: none">
-                  <label>Cadence</label>
-                  <input
-                    type="text"
-                    class="cadenceInput"
-                    placeholder="meters"
-                  />
-                </article>
-              </section>
-              <button type="submit">OK</button>
-            </form>
+            </section>
+            <button type="submit" style>OK</button>
+          </form>
+          <div class="specificWorkout">
             <article class="displayedSummary">
               <div class="summaryType">Running on June 12</div>
               <div class="summaryDistance">
