--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
                 <input
                   name="elevation"
                   type="text"
-                  class="elevationGainInput"
-                  id="typeInput"
+                  class="workoutTypeInput"
                   placeholder="step per min"
                 />
               </article>
@@ -79,8 +78,7 @@
                 <input
                   name="cadence"
                   type="text"
-                  class="cadenceInput"
-                  id="typeInput"
+                  class="workoutTypeInput"
                   placeholder="meters"
                 />
               </article>
