--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <form class="logWorkout hidden">
             <article class="type">
               <label>Type</label>
-              <select class="select" required>
+              <select class="yeet">
                 <option value="Running">Running</option>
                 <option value="Cycling">Cycling</option>
               </select>
