--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
           <div class="logoContainer">
             <img src="images/TrackFitLogo.png" alt="" class="logo" />
           </div>
-          <form class="logWorkout hidden">
+          <form class="logWorkout">
             <article class="type">
               <label>Type</label>
-              <select class="yeet">
+              <select class="select">
                 <option value="Running">Running</option>
                 <option value="Cycling">Cycling</option>
               </select>
