--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     />
     <link rel="stylesheet" href="style.css" />
     <script defer src="script.js"></script>
+    <link rel="icon" href="images/favicon.png" type="image/x-icon" />
   </head>
   <body>
     <header>
